--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,53 @@ button {
 }
 
 footer {
-  background: black;
+  width: 100%;
+  background-color: #00082e;
+  position: absolute;
+}
+
+footer div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  color: #fff;
+  padding: 2em;
+  line-height: 40px;
+}
+
+footer .footer-logo p {
+  width: 70%;
+  margin-top: 20px;
+}
+
+footer h3 {
+  color: #fff;
+  font-weight: bold;
+  position: relative;
+}
+
+footer h3::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+}
+
+footer .footer-logo,
+.help-line,
+.menu-line {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+footer li {
+  width: 160px;
+  text-align: left;
+  margin-top: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
