--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,8 @@ button {
   width: 100%;
   height: 80px;
   background: #0a0a77;
+  position: relative;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -395,7 +397,11 @@ button {
   width: 100%;
   height: 90vh;
   background: #031efe;
-  background: linear-gradient(169deg, #031efe 0%, #0a0a77 0%, #28a0b5 100%);
+  background: linear-gradient(90deg, #0a0a77, #0d0d96, #0f0fa9, #1212ce, #1e1eeb, #3131ed, #4343ef, #6969f2);
+  background-size: 1400% 1400%;
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -407,7 +413,49 @@ button {
   align-items: flex-start;
   flex-direction: column;
 }
+#welcome-banner .row .text h1 {
+  color: transparent;
+  background: linear-gradient(90deg, #f06850, white);
+  -webkit-background-clip: text;
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 15s ease infinite;
+  -moz-animation: AnimationName 15s ease infinite;
+  animation: AnimationName 15s ease infinite;
+}
 
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 #top-navigations {
   width: 100%;
   padding: 80px;
@@ -526,7 +574,7 @@ button {
 
 #packages {
   width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: #f4f8fb;
   display: flex;
   justify-content: flex-start;
@@ -618,6 +666,67 @@ footer li {
   width: 160px;
   text-align: left;
   margin-top: 10px;
+}
+
+footer a,
+footer a:hover {
+  color: #fff;
+  position: relative;
+}
+
+footer a:before,
+footer a:after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  right: 50%;
+  height: 2px;
+  width: 0px;
+  background-color: #fff;
+}
+
+footer a:before {
+  right: 50%;
+}
+
+footer a:after {
+  left: 50%;
+}
+
+footer a:hover:before,
+footer a:hover:after {
+  width: 50%;
+  transition: width 0.6s;
+}
+
+#contact {
+  background-repeat: repeat;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column-gap: 2em;
+  justify-content: center;
+  align-items: center;
+  padding: 5em;
+  position: relative;
+}
+#contact .blur {
+  position: absolute;
+  background-image: url(/img/istockphoto-1183632265-612x612.jpg);
+  filter: blur(3px);
+  width: 100%;
+  height: 100%;
+}
+#contact .contact-form,
+#contact .contact-map {
+  position: relative;
+}
+#contact .contact-form label {
+  text-shadow: 2px 2px #fff;
+  font-weight: bold;
+}
+#contact .contact-form input {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
