--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 80px;
     background: $dark-blue;
+    position: relative;
+    z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
