--- a/scss/partials/_packages.scss
+++ b/scss/partials/_packages.scss
@@ -1,6 +1,6 @@
 #packages {
   width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: #f4f8fb;
   display: flex;
   justify-content: flex-start;
