--- a/scss/partials/_welcome.scss
+++ b/scss/partials/_welcome.scss
@@ -3,17 +3,70 @@
   height: 90vh;
   background: $blue;
   background: linear-gradient(
-    169deg,
-    $blue 0%,
-    $dark-blue 0%,
-    rgba(40, 160, 181, 1) 100%
+    90deg,
+    $dark-blue,
+    #0d0d96,
+    #0f0fa9,
+    #1212ce,
+    #1e1eeb,
+    #3131ed,
+    #4343ef,
+    #6969f2
   );
+  background-size: 1400% 1400%;
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
   @include flex();
- 
-  .row{
-    .text{
-      @include flex($ai:flex-start,$fd:column);
+
+  .row {
+    .text {
+      @include flex($ai: flex-start, $fd: column);
+      h1 {
+        color:transparent;
+        background: linear-gradient(
+          90deg,
+          $secondaryColor,white
+        );
+        -webkit-background-clip: text;
+        background-size: 400% 400%;
+        -webkit-animation: AnimationName 15s ease infinite;
+        -moz-animation: AnimationName 15s ease infinite;
+        animation: AnimationName 15s ease infinite;
+      }
     }
-    
+  }
+}
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
