--- a/css/style.css
+++ b/css/style.css
@@ -467,10 +467,16 @@ button {
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
 }
-#top-navigations .row div i {
-  color: #f06850;
-  font-size: 42px;
-  margin-bottom: 25px;
+#top-navigations .row div img {
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  margin: 1em;
+  margin-left: 0;
+}
+#top-navigations .row div #nar {
+  height: 60px;
+  border-radius: 0;
 }
 #top-navigations .row div p {
   color: #035f91;
@@ -618,6 +624,92 @@ button {
   text-align: center;
 }
 
+#contact {
+  background-repeat: repeat;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column-gap: 2em;
+  justify-content: center;
+  align-items: center;
+  padding: 5em;
+  position: relative;
+}
+#contact .blur {
+  position: absolute;
+  background-image: url(/img/istockphoto-1183632265-612x612.jpg);
+  filter: blur(3px);
+  width: 100%;
+  height: 100%;
+}
+#contact .contact-form,
+#contact .contact-map {
+  position: relative;
+}
+#contact .contact-form label {
+  text-shadow: 2px 2px #fff;
+  font-weight: bold;
+}
+#contact .contact-form input {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+#azercell {
+  height: 100vh;
+  width: 100%;
+  background-image: url(/img/azercell-item.png);
+  position: relative;
+}
+#azercell .bg {
+  background: #031efe;
+  background: linear-gradient(90deg, #0a0a77, #F72585, #7209B7, #3A0CA3, #4361EE, #4CC9F0);
+  background-size: 1000% 1000%;
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  clip-path: polygon(0 61%, 100% 0, 100% 100%, 0% 100%);
+}
+#azercell p {
+  color: black;
+  position: relative;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 footer {
   width: 100%;
   background-color: #00082e;
@@ -697,36 +789,6 @@ footer a:hover:before,
 footer a:hover:after {
   width: 50%;
   transition: width 0.6s;
-}
-
-#contact {
-  background-repeat: repeat;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-column-gap: 2em;
-  justify-content: center;
-  align-items: center;
-  padding: 5em;
-  position: relative;
-}
-#contact .blur {
-  position: absolute;
-  background-image: url(/img/istockphoto-1183632265-612x612.jpg);
-  filter: blur(3px);
-  width: 100%;
-  height: 100%;
-}
-#contact .contact-form,
-#contact .contact-map {
-  position: relative;
-}
-#contact .contact-form label {
-  text-shadow: 2px 2px #fff;
-  font-weight: bold;
-}
-#contact .contact-form input {
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
