--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -5,5 +5,8 @@
 @import "description";
 @import "service-info";
 @import "packages";
-@import "footer";
 @import "contact";
+@import "azercell";
+@import "bakcell";
+@import "nar";
+@import "footer";
