--- a/scss/partials/_top-navigation.scss
+++ b/scss/partials/_top-navigation.scss
@@ -8,10 +8,17 @@
       box-shadow: 0px 1px 15px 1px rgba(19, 68, 165, 0.1);
       border-radius: 10px;
       transition: all 0.3s ease-in-out;
-      i {
-        color: $secondaryColor;
-        font-size: 42px;
-        margin-bottom: 25px;
+      
+      img {
+        border-radius: 50%;
+        width:70px;
+        height:70px;
+        margin:1em;
+        margin-left: 0;
+      }
+      #nar{
+        height:60px;
+        border-radius: 0;
       }
       p {
         color: $pSecondaryColor;
