--- a/scss/partials/_azercell.scss
+++ b/scss/partials/_azercell.scss
@@ -1,18 +1,25 @@
 #azercell {
   height: 100vh;
   width: 100%;
-  background-image: url(/img/azercell-item.png);
   position: relative;
+  .azercell-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    background-image: url(/img/azercell-2.jpg);
+    clip-path: polygon(0 0, 100% 0%, 0 61%);
+  }
   .bg {
     background: $blue;
     background: linear-gradient(
       90deg,
       $dark-blue,
-      #F72585,
-      #7209B7,
-      #3A0CA3,
-      #4361EE,
-      #4CC9F0,
+      #f72585,
+      #7209b7,
+      #5c2583,
+      #3a0ca3,
     );
     background-size: 1000% 1000%;
     -webkit-animation: AnimationName 30s ease infinite;
@@ -20,44 +27,48 @@
     animation: AnimationName 30s ease infinite;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     clip-path: polygon(0 61%, 100% 0, 100% 100%, 0% 100%);
   }
   p {
-    color: black;
-    position: relative;
+    color: #fff;
+    position: absolute;
+    width: 60%;
+    bottom: 20%;
+    right:5%;
+    font-size: 21px;
   }
 }
 @-webkit-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
   }
-  @-moz-keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  50% {
+    background-position: 100% 50%;
   }
-  @keyframes AnimationName {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  100% {
+    background-position: 0% 50%;
   }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
