--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -14,10 +14,11 @@ footer .footer-logo p {
   width: 70%;
   margin-top: 20px;
 }
-footer h3 {
+footer h4 {
   color: #fff;
   font-weight: bold;
   position: relative;
+  text-decoration: underline;
 }
 footer h3::after {
   content: "";
@@ -33,7 +34,7 @@ footer .footer-logo,
 .menu-line {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 footer li {
