--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -8,18 +8,44 @@
     justify-content: center;
     align-items: center;
     .row {
+      display: flex;
+      align-items: center;
+      img{
+        width:100%;
+        height:60px;
+      }
       .menu {
+        height:60px;
         ul {
           height: 100%;
           display: flex;
           align-items: center;
           justify-content: space-around;
           li {
-            // display: inline-block;
             padding: 10px 25px;
             margin: 0 10px;
             a {
               @include font-settings($fw: bold);
+              position: relative;
+              &::after,&::before{
+                content: '';
+                position: absolute;
+                height:2px;
+                width:0px;
+                bottom:-5px;
+                background-color: $secondaryColor;
+                transition: width .3s;
+              }
+              &::before{
+                right:50%;
+
+              }
+              &::after{
+                left:50%
+              }
+              &:hover::before,&:hover::after {
+                width:50%
+              }
             }
           }
         }
