--- a/scss/partials/_packages.scss
+++ b/scss/partials/_packages.scss
@@ -1,6 +1,5 @@
 #packages {
   width: 100%;
-  max-height: 100vh;
   background-color: #f4f8fb;
   display: flex;
   justify-content: flex-start;
@@ -21,6 +20,13 @@
 .package {
   padding: 4em;
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 16%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.package h2 {
+  padding-bottom: .5em;
 }
 .package h3 {
   border-bottom: 3px solid $primaryColor;
