--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -11,7 +11,7 @@
   position: relative;
   .blur {
     position: absolute;
-    background-image: url(/img/istockphoto-1183632265-612x612.jpg);
+    background-image: url(../img/istockphoto-1183632265-612x612.jpg);
     filter: blur(3px);
     width: 100%;
     height: 100%;
