--- a/scss/partials/_azercell.scss
+++ b/scss/partials/_azercell.scss
@@ -8,7 +8,7 @@
     position: absolute;
     top:0;
     left:0;
-    background-image: url(/img/azercell-2.jpg);
+    background-image: url(../img/azercell-2.jpg);
     clip-path: polygon(0 0, 100% 0%, 0 61%);
   }
   .bg {
