--- a/scss/partials/_nar.scss
+++ b/scss/partials/_nar.scss
@@ -8,7 +8,7 @@
       position: absolute;
       top:0;
       left:0;
-      background-image: url(/img/nar.png);
+      background-image: url(../img/nar.png);
       background-position: top;
       clip-path: polygon(0 0, 100% 0%, 0 61%);
     }
